# discord-message-shortcut

./: LICENSE  README.md  pyproject.toml
src/discord_message_shortcut/: __init__.py  discord_token_scraper.py  dms_manager.py  main.py  send_message.py  ui.py
src/discord_message_shortcut/fixes/: fix_lock_screen.py
