[project]
name = "discord-message-shortcut"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "SamthinkGit", email = "sebastianmayorquin@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "keyboard>=0.13.5",
    "rich>=14.2.0",
]

[project.scripts]
discord-message-shortcut = "discord_message_shortcut:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
