[project]
name = "discord-message-shortcut"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "SamthinkGit", email = "sebastianmayorquin@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "keyboard>=0.13.5",
    "pillow>=12.0.0",
    "platformdirs>=4.5.1",
    "pyside6>=6.10.1",
    "pystray>=0.19.5",
    "rich>=14.2.0",
]

[project.scripts]
discord-message-shortcut = "discord_message_shortcut:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
